--- a/css/app.scss
+++ b/css/app.scss
@@ -1,3 +1,12 @@
 body {
   margin: 0;
 }
+
+.hint {
+  font-family: monospace;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #fff;
+  padding: 20px;
+}
